--- a/style/config.css
+++ b/style/config.css
@@ -18,6 +18,7 @@ header {
 }
 a {
   text-decoration: none;
+  color: black;
 }
 .greentext {
   color: #598d66;
@@ -42,7 +43,6 @@ li {
 }
 @media (max-width: 690) {
   .container {
-  width: 80vw;
-
-}
+    width: 80vw;
+  }
 }
