--- a/style/hero.css
+++ b/style/hero.css
@@ -20,3 +20,16 @@
 .hero__title {
   font-size: 60px;
 }
+.hero__bird {
+  width: 540px;
+  height: 621px;
+}
+@media (max-width: 690px){
+  .hero__bird {
+    width: 330px;
+    height: 380px;
+  }
+  .hero__title {
+    font-size: 40px;
+  }
+}
