--- a/style/promo.css
+++ b/style/promo.css
@@ -64,4 +64,10 @@
   padding: 20px 60px 20px 60px;
   color: #2c2d35;
   font-size: 20px;
+  border: none;
+}
+@media (max-width: 690px){
+ .promo__title {
+  font-size: 30px;
+} 
 }
