--- a/style/footer.css
+++ b/style/footer.css
@@ -50,8 +50,14 @@
 .footer__liltext {
   font-size: 12px;
 }
-@media (max-width: 1200px){
-  .footer__flex{
+@media (max-width: 1200px) {
+  .footer__flex {
     flex-direction: row;
+  }
+}
+@media screen and (max-width: 690px) and (min-width: 510px) {
+  .footer__flex {
+    height: 319px;
+    flex-direction: column;
   }
 }
