--- a/style/hero.css
+++ b/style/hero.css
@@ -24,12 +24,27 @@
   width: 540px;
   height: 621px;
 }
-@media (max-width: 1200px){
+@media (max-width: 1200px) {
   .hero__bird {
     width: 330px;
     height: 380px;
   }
   .hero__title {
     font-size: 40px;
+  }
+}
+@media screen and (max-width: 690px) and (min-width: 510px) {
+  .hero__bird {
+    width: 195px;
+    height: 239px;
+  }
+  .hero__title {
+    font-size: 36px;
+  }
+  .hero__discription_gray {
+    font-size: 16px;
+  }
+  .hero {
+    padding-top: 150px;
   }
 }
