--- a/style/team.css
+++ b/style/team.css
@@ -31,9 +31,20 @@
 .team__title {
   font-size: 40px;
 }
-@media (max-width: 1200px)
- {
+@media (max-width: 1200px) {
   .team {
     flex-direction: column;
+  }
+}
+@media screen and (max-width: 690px) and (min-width: 510px) {
+  .team__hand {
+    width: 375px;
+    height: 370px;
+  }
+  .team__title {
+    font-size: 24px;
+  }
+  .team__content{
+    font-size: 16px;
   }
 }
