--- a/style/footer.css
+++ b/style/footer.css
@@ -57,7 +57,34 @@
 }
 @media screen and (max-width: 690px) and (min-width: 510px) {
   .footer__flex {
-    height: 319px;
     flex-direction: column;
+  }
+  .footer {
+    height: auto;
+  }
+  .footer__logo {
+    flex-direction: row;
+  }
+  .footer__social {
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+    padding-bottom: 20px;
+  }
+  .footer__links {
+    justify-content: space-between;
+    width: 132px;
+  }
+  .footer__br {
+    display: none;
+  }
+  .footer__black {
+    font-size: 20px;
+  }
+  .footer__gray {
+    font-size: 16px;
+  }
+  .footer__liltext {
+    font-size: 12px;
   }
 }
