--- a/style/footer.css
+++ b/style/footer.css
@@ -50,10 +50,10 @@
 .footer__liltext {
   font-size: 12px;
 }
-.footer__line{
+.footer__line {
   display: none;
   width: 80vw;
-  border: 1px solid #C3D1C6;
+  border: 1px solid #c3d1c6;
 }
 @media (max-width: 1200px) {
   .footer__flex {
@@ -92,7 +92,31 @@
   .footer__liltext {
     font-size: 12px;
   }
-  .footer__line{
-  display:block;
+  .footer__line {
+    display: block;
+  }
 }
+@media screen and (max-width: 640px) {
+  .footer__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer {
+    height: 100%;
+  }
+  .footer__social {
+    width: 132px;
+  }
+  .footer__social {
+    justify-content: space-between;
+  }
+  .footer__black {
+    font-size: 16px;
+  }
+  .footer__gray {
+    font-size: 16px;
+  }
+  .footer__liltext {
+    font-size: 16px;
+  }
 }
