--- a/style/team.css
+++ b/style/team.css
@@ -48,3 +48,18 @@
     font-size: 16px;
   }
 }
+@media screen and (max-width: 640px){
+  .team__hand{
+    width: 235px;
+    height: 290px;
+  }
+  .team__title{
+    font-size: 24px;
+  }
+  .team__content{
+    font-size: 16px;
+  }
+  .team{
+    margin: 50px auto;
+  }
+}
